receive message and send message

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -3,8 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>MongoDB综合管理页面</title>
+
+    <link rel="stylesheet" href="static/plugins/Bootstrap/css/bootstrap-theme.css">
+
+
+    <script src="static/plugins/jquery/jquery-1.12.2.js"></script>
+    <link rel="stylesheet" href="static/plugins/Bootstrap/css/bootstrap.css">
+    <script src="static/plugins/Bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
+    <center><h1>基于MongoDB数据库的物联网平台管理页面</h1></center>
+    <hr>
+   <div class="container">
+      <div class="row">
+          <center>
+              <a type="button" class="btn btn-primary btn-lg" href="/showrd" target="_blank">查看实时数据</a>
+              <a type="button" class="btn btn-primary btn-lg" href="/history" target="_blank">查看历史数据</a>
+              <!--<a type="button" class="btn btn-primary btn-lg">Large button</a>-->
+          </center>
+      </div>
+    </div>
 
 </body>
 </html>
