--- a/web/templates/history/index.html
+++ b/web/templates/history/index.html
@@ -3,8 +3,152 @@
 <head>
     <meta charset="UTF-8">
     <title>历史数据查看中心</title>
+    <link rel="stylesheet" href="static/plugins/Bootstrap/css/bootstrap-theme.css">
+
+
+    <script src="static/plugins/jquery/jquery-1.12.2.js"></script>
+    <link rel="stylesheet" href="static/plugins/Bootstrap/css/bootstrap.css">
+    <script src="static/plugins/Bootstrap/js/bootstrap.js"></script>
+     <script src="static/plugins/ECharts/echarts.js"></script>
+    <style>
+        body{
+            background-color:rgb(145,166,151);
+        }
+        .chart-box{
+            width:45%;
+            height:240px;
+            float:left;
+            border:1px solid;
+            border-radius:5px;
+            margin-left:1%;
+            margin-top:1%;
+        }
+    </style>
 </head>
-<body>
-     <center><h1>历史数据查看中心</h1></center>
+<body >
+
+     <center style="z-index:9999;"><h1>历史数据查看中心</h1></center>
+
+    <div class="container pull-left col-3" style="float:left;width:20%;">
+        <hr>
+        <div class="row">
+            <center> <button type="button" class="btn btn-primary btn-lg" deviceid="1" itype="change_device">设备1</button></center>
+        </div>  <hr>
+         <div class="row">
+            <center> <button type="button" class="btn btn-primary btn-lg" deviceid="2" itype="change_device">设备2</button></center>
+        </div>  <hr>
+
+         <div class="row">
+            <center> <button type="button" class="btn btn-primary btn-lg" deviceid="3" itype="change_device">设备3</button></center>
+        </div>  <hr>
+         <div class="row">
+            <center> <button type="button" class="btn btn-primary btn-lg" deviceid="4" itype="change_device">设备4</button></center>
+        </div>  <hr>
+         <div class="row">
+            <center> <button type="button" class="btn btn-primary btn-lg" deviceid="5" itype="change_device">设备5</button></center>
+        </div><hr>
+
+     <div class="alert alert-danger" role="alert" id="alert_window" style="display:none;">
+      <strong>错误</strong> 接收数据失败，连接服务器异常，请查看后台程序
+    </div>
+        <div class="alert alert-info" role="alert" id="success_window"style="display:none;">
+            <strong>连接服务器成功</strong> 正常更新实时数据，五秒一刷新，请查看右侧数据窗口。
+        </div>
+
+    </div>
+    <div class="container" style="float:left;width:80%;">
+          <div class="chart-box" id="chart_1"></div>
+          <div class="chart-box" id="chart_2"></div>
+          <div class="chart-box" id="chart_3"></div>
+          <div class="chart-box" id="chart_4"></div>
+
+    </div>
+
+    <script>
+        $(function(){
+            refreshChart(0);
+
+            $("[itype='change_device']").click(function(){
+                var dvcid = $(this).attr("deviceid");
+                globalData.deviceid = dvcid;
+                 refreshChart(1);
+            });
+        });
+        globalData = {
+            deviceid:1,
+        }
+        globalData.deviceid =1;
+        globalData.len = 100;
+        globalData.timeInter = 5000;
+        myChart1=echarts.init(document.getElementById("chart_1"))  ;
+        myChart2=echarts.init(document.getElementById("chart_2"))  ;
+        myChart3=echarts.init(document.getElementById("chart_3"))  ;
+        myChart4=echarts.init(document.getElementById("chart_4"))  ;
+
+        function refreshChart(flag){
+             showChart(globalData.deviceid,myChart1,1001,'最近75秒内数据--温度');
+             showChart(globalData.deviceid,myChart2,1002,'最近75秒内数据--电压');
+             showChart(globalData.deviceid,myChart3,1003,'最近75秒内数据--电流');
+             showChart(globalData.deviceid,myChart4,1004,'最近75秒内数据--属性1');
+             if(!flag){
+               setTimeout(refreshChart,globalData.timeInter);
+              }
+
+        }
+        function showChart(deviceid,chartitem,infocode,title){
+            $.ajax({
+                method:'get',
+                url:'showrd/get_fivemin_data?id='+deviceid,
+                dataType:'json',
+                success:function(jsonData){
+
+                    //{"1001":5,"1002":229,"1003":0.545,"1004":114,"1005":136,"1006":135,"1007":151,"1008":192,"1009":137,"1010":109,"id":1,"time":"1520942430677"}"
+                    var xdata = [];
+                    var ydata = [];
+                    var idx = 0;
+                    for(var i=jsonData.length-1;i>0;i--){
+
+                        idx++;
+                        if(idx > globalData.len)break;
+                        xdata[xdata.length] = idx;
+                        ydata[ydata.length] = jsonData[i][infocode];
+                     }
+
+                    var option = {
+                        title:[{
+                            text:title+",设备ID："+deviceid,
+
+                        }],
+                        xAxis: {
+                            type: 'category',
+                            data: xdata
+                        },
+                        yAxis: {
+                            type: 'value'
+                        },
+                        series: [{
+                            data: ydata,
+                            type: 'line'
+                        }]
+                    };
+
+
+
+                     chartitem.setOption(option)  ;
+                     $("#alert_window").hide();
+                     $("#success_window").show();
+                },
+                error:function(e){
+                    console.log(e);
+                    $("#alert_window").show();
+                      $("#success_window").hide();
+                }
+            });
+
+
+
+        }
+
+    </script>
 </body>
 </html>
