--- a/web/templates/history/index.html
+++ b/web/templates/history/index.html
@@ -67,8 +67,37 @@
                 <tr>
                     <td style="width:100%;">
                         <span>选择日期</span>
-                        <input id="date1" class="mini-datepicker" />
-                        <a class="mini-button" >查询</a>
+                        <input id="date1" class="mini-datepicker" onvaluechanged="loadHistoryData" valueType="string"
+                        format="yyyy-MM-dd" timeFormat="yyyy-MM-dd HH:mm:SS"/>
+                       <select id="hour" onhaschange="loadHistoryData">
+                            <option value ="1">1</option>
+                            <option value ="2">2</option>
+                            <option value ="3">3</option>
+                            <option value ="4">4</option>
+                            <option value ="5">5</option>
+                            <option value ="6">6</option>
+                            <option value ="7">7</option>
+                            <option value ="8">8</option>
+                            <option value ="9">9</option>
+                            <option value ="10">10</option>
+                            <option value ="11">11</option>
+                            <option value ="12">12</option>
+                            <option value ="13">13</option>
+                            <option value ="14">14</option>
+                            <option value ="15">15</option>
+                            <option value ="16">16</option>
+                            <option value ="17">17</option>
+                            <option value ="18">18</option>
+                            <option value ="19">19</option>
+                            <option value ="20">20</option>
+                            <option value ="21">21</option>
+                            <option value ="22">22</option>
+                            <option value ="23">23</option>
+                            <option value ="24">24</option>
+                        </select>
+                        <span>点</span>
+                        <a class="mini-button" onclick="loadHistoryData">查询</a>
+                        <span>查询指定时间一个小时数据</span>
                     </td>
                     <td style="white-space:nowrap;">
                         <!--<input id="key" class="mini-textbox" emptyText="请输入姓名" style="width:150px;" onenter="onKeyEnter"/>-->
@@ -110,6 +139,9 @@
                 globalData.deviceid = dvcid;
                  loadHistoryData();
             });
+            $("#hour").change(function(){
+                loadHistoryData();
+            });
 
         });
         globalData = {
@@ -120,29 +152,40 @@
         globalData.timeInter = 5000;
 
         function loadHistoryData(){
+             var date1 = mini.get("date1").getValue();
+             var hour = $("#hour").val();
+             if(date1&&hour){
+              url = 'history/get_fivemin_data?id='+globalData.deviceid+"&time="+date1+" "+hour;
+             }else{
+                 url = 'history/get_fivemin_data?id='+globalData.deviceid;
+             }
+
+            mini.get("datagrid1").clearRows();
+            datagrid = mini.get("datagrid1");
+            datagrid.mask("正在查询数据...");
              $.ajax({
                 method:'get',
-                url:'showrd/get_fivemin_data?id='+globalData.deviceid,
+                url:url,
                 dataType:'json',
                 success:function(jsonData){
-
+                    jsonData = jsonData.reverse();
                     for(var i=0;i<jsonData.length;i++){
                         var newDate = new Date();
                         var timeint = parseInt(jsonData[i]["time"]);
                         newDate.setTime(timeint);
-                        jsonData[i]["time"] = newDate.format('yyyy-MM-dd h:m:s');
+                        jsonData[i]["time"] = newDate.format('yyyy-MM-dd hh:mm:ss');
                     }
-                    console.log(jsonData);
-                    datagrid = mini.get("datagrid1");
+
+
                     datagrid.setData(jsonData);
-                     $("#alert_window").hide();
-                     $("#success_window").show();
+
                       $("#info").html("正常更新实时数据，五秒一刷新，请查看右侧数据窗口。");
+                      datagrid.unmask();
                 },
                 error:function(e){
                     console.log(e);
-                    $("#alert_window").show();
-                      $("#success_window").hide();
+
+                      datagrid.unmask();
                 }
             });
 
