--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -21,7 +21,53 @@
               <a type="button" class="btn btn-primary btn-lg" href="/history" target="_blank">查看历史数据</a>
               <!--<a type="button" class="btn btn-primary btn-lg">Large button</a>-->
           </center>
-      </div>
+      </div><br><br>
+          <div class="row">
+           <div class="container">
+               <div class="jumbotron">
+                    <h1>欢迎光临基于MongoDB数据库的物联网管理系统</h1>
+                    <p>
+                   <h3>基于MongoDB数据库的物联网管理系统的设计思路</h3>
+                     <h2>一、设计模块</h2>
+                  <p><b>  1、服务器</b></p>
+                    <p>A、MongoDB数据库服务</p>
+                   <p>  Nosql式服务器，负责保存设备产生的实时数据。</p>
+                   <p> B、MQTT服务器</p>
+                   <p>   物联网的数据中转站，负责接收基站设备发送的数据，并转发到接收端。由于mqtt协议是双向通信协议，所以提供了后期完成web端反向控制基础设备的通道。
+                   </p>
+                  <p>C、Web服务器</p>
+                    <p>连接MongoDB数据库服务，提供数据查询接口，数据展示页面，查看特定时间内特定设备的数据信息。</p>
+                  <p>  D、实时数据接收端</p>
+                   <p> 从MQTT服务器中接收由前端采集设备发送的实时数据，并按照一定规律将数据存入数据库。</p>
+
+
+
+                <p> <b>   2、前端采集设备</b></p>
+                   <p> 由于本设计没有实体设备，故采用Python客户端模拟设备，向MQTT服务器以五秒一次的频率发送数据，数据格式为</p>
+                  <li>  {</li>
+                   <li> “id”:”模拟设备ID”,</li>
+                   <li> “time”:”当前时间戳”,</li>
+                 <li>   “1001”:”信息码数值，约定1001代表温度、1002代表电压等等”,</li>
+                    <li>“1002”:”信息码数值，约定1001代表温度、1002代表电压等等”,</li>
+                    <li>“1003”:”信息码数值，约定1001代表温度、1002代表电压等等”,</li>
+                   <li> “1004”:”信息码数值，约定1001代表温度、1002代表电压等等”,</li>
+                   <li> ....</li>
+                  <li>  }</li>
+                   <p> 由于MongoDB是Nosql式数据库，故可储存格式扩展性非常强，所以每个设备内部的信息码可改变，由编程人员约定，如A设备拥有1001,1002,1003信息码，分别代表温度、电压、电流，而B设备拥有2001,2002,2003,2004信息码，分别代表气压、压力、亮度、压强，则可根据具体的设备信息码模拟发送不同的数据格式。
+
+                   </p>
+                    <h2>二、技术说明</h2>
+                 <p>   本设计以物联网为基础，以Python为工具，实现一个由基础设备、数据服务器、数据展示程序三端组成的物联网简单网络。使用了Http协议、MQTT协议为通信协议，使用MongoDB提供数据库服务，使用python的paho-mqtt包为连接mqtt服务器工具。
+
+                    </p>
+                    <p>  开发环境：Windows+Pycharm+Python
+                    </p><p>运行环境：Windows or Linux</p>
+                   <!--<a class="btn btn-primary btn-lg" role="button">-->
+                        <!--学习更多</a>-->
+                  </p>
+               </div>
+           </div>
+       </div>
     </div>
 
 </body>
